# wfcrl-env

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  demo.ipynb  example.py  interface.ipynb  pyproject.toml  requirements.txt  run.bat  run.py  run_floris.py  test.py  test_rl.py
cases/: farm_15_tcrwp.py  farm_16.py  farm_32.py  farm_3_fastfarm.py  farm_3_floris.py  farm_3_wfsim.py  farm_6_fastfarm.py  farm_7.py
doc/: INTERFACE.md
docs/: BENCHMARK.md
example/: DISCON_SC.F90  SC_DLL.F90
example/TSinflow/: FFTest_WT2.fst  FFTest_WT3.fst  TSinflow.IfW.ech  TSinflow.IfW.sum  TSinflow.fstf
examples/: demo.ipynb  example_fastfarm.py  example_floris.py  interface.ipynb
kernel-wfcrl/: kernel.json
simulators/fastfarm/inputs/template/FarmInputs/: Case.fstf  FFTest_WT1.fst
simulators/fastfarm/src/: DISCON_SC.F90  SC_DLL.F90
simulators/wfsim/: simInterface.m
src/: envs.py  ff_utils.py  interface.py  mdp.py  multiagent_env.py  reward.py  rewards.py  simple_env.py  simul_utils.py
src/cases/: farm_15_tcrwp.py  farm_16.py  farm_32.py  farm_3_fastfarm.py  farm_3_floris.py  farm_3_wfsim.py  farm_6_fastfarm.py  farm_7.py
wfcrl/: __init__.py  interface.py  jupyter_utils.py  mdp.py  multiagent_env.py  rewards.py  simple_env.py  simul_utils.py  wrappers.py
wfcrl/environments/: __init__.py  data_cases.py  farm_16.py  registration.py
wfcrl/scripts/: __init__.py  install_simulators.py  make_ff.sh
wfcrl/simulators/fastfarm/inputs/template/FarmInputs/: 90m_08mps.inp  Case.fstf
wfcrl/simulators/fastfarm/src/: SC_DLL.F90
wfcrl/simulators/fastfarm/src/DISCON/: CMakeLists.txt  DISCON.F90
wfcrl/simulators/fastfarm/src/SC_DLL/: CMakeLists.txt  SC_DLL.F90
wfcrl/simulators/floris/inputs/template/: case.yaml
